// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article found 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
  },
  "event": Object {
    "input": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "message": Object {
      "id": "6270464463537",
      "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"計程車上有裝悠遊卡感⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "選擇請打 1> 計程車上有裝悠遊卡感應器，老人悠悠卡可以

若以上皆非，請打 0。",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
                "label": "Choose this one",
                "type": "postback",
              },
            ],
            "text": "[Similarity:52.41%] 
 計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我們的福利，與大家分享，可⋯",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":0,\\"issuedAt\\":1497994017447}",
                "label": "Choose this one",
                "type": "postback",
              },
            ],
            "text": "These messages don't match mine :(",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`articles found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
      "AVvY-yizyCdS-nWhuYWy",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"YouTube · ⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "選擇請打 1> YouTube  ·  寻找健康人生

選擇請打 2> YouTube
·
寻找健康人生",
      "template": Object {
        "columns": Array [
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
                "label": "Choose this one",
                "type": "postback",
              },
            ],
            "text": "[Similarity:100.00%] 
 YouTube  ·  寻找健康人生",
          },
          Object {
            "actions": Array [
              Object {
                "data": "{\\"input\\":2,\\"issuedAt\\":1497994017447}",
                "label": "Choose this one",
                "type": "postback",
              },
            ],
            "text": "[Similarity:100.00%] 
 YouTube
·
寻找健康人生",
          },
        ],
        "type": "carousel",
      },
      "type": "template",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`only one article found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": 1,
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": true,
  "issuedAt": 1497994017447,
  "replies": undefined,
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle article not found 1`] = `
Object {
  "data": Object {
    "articleSources": Array [
      "親戚轉傳",
      "同事轉傳",
      "朋友轉傳",
      "自己輸入的",
    ],
    "searchedText": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "altText": "找不到關於「YouTube · ⋯⋯」訊息耶 QQ

請問您是從哪裡看到這則訊息呢？

親戚轉傳 > 請傳 1
同事轉傳 > 請傳 2
朋友轉傳 > 請傳 3
自己輸入的 > 請傳 4

請按左下角「⌨️」鈕輸入選項編號。",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":1,\\"issuedAt\\":1497994017447}",
            "label": "親戚轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":2,\\"issuedAt\\":1497994017447}",
            "label": "同事轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":3,\\"issuedAt\\":1497994017447}",
            "label": "朋友轉傳",
            "type": "postback",
          },
          Object {
            "data": "{\\"input\\":4,\\"issuedAt\\":1497994017447}",
            "label": "自己輸入的",
            "type": "postback",
          },
        ],
        "text": "找不到關於「YouTube · ⋯⋯」訊息耶 QQ
請問您是從哪裡看到這則訊息呢？",
        "type": "buttons",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_ARTICLE_SOURCE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;
